Fix an oldIE alignment issue with bbplayer widget

--- a/static/css/bbplayer.css
+++ b/static/css/bbplayer.css
@@ -43,6 +43,7 @@
     height:110px;
     position:absolute;
     bottom:0px;
+    left:0px;
     background-color:black;
 }
 
